tests/invalid_inputs/sema/pointer_to_func.cpp
// test that pointers to functions are forbidden

void (*p)();
